--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "mysql2": "^2.1.0",
     "node-fetch": "^2.6.0",
     "node-schedule": "^1.3.2",
+    "nodemailer": "^6.4.10",
     "nodemon": "^2.0.4",
     "queue-fifo": "^0.2.6",
     "read-excel-file": "^4.0.6",
