--- a/package.json
+++ b/package.json
@@ -28,14 +28,13 @@
     "read-excel-file": "^4.0.6",
     "request": "^2.88.2",
     "uuidv4": "^6.0.9",
-    "xlsx": "^0.16.1"
-  },
-  "devDependencies": {
+    "xlsx": "^0.16.1",
     "dotenv": "^8.2.0",
     "fs": "0.0.1-security",
     "multer": "^1.4.2",
     "mv": "^2.1.1",
     "sequelize": "^5.22.3",
     "sequelize-cli": "^6.1.0"
-  }
+  },
+  "devDependencies": {}
 }
