--- a/package.json
+++ b/package.json
@@ -6,18 +6,23 @@
     "start": "nodemon ./bin/www"
   },
   "dependencies": {
+    "body-parser": "^1.19.0",
     "cheerio": "latest",
     "cookie-parser": "~1.4.4",
     "csv-parser": "^2.3.2",
     "debug": "~2.6.9",
+    "dotenv": "^8.2.0",
     "express": "^4.16.4",
     "formidable": "^1.2.2",
+    "fs": "0.0.1-security",
     "hashmap": "^2.4.0",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "lodash": "^4.17.15",
     "moment": "^2.27.0",
     "morgan": "~1.9.1",
+    "multer": "^1.4.2",
+    "mv": "^2.1.1",
     "mysql": "^2.18.1",
     "mysql2": "^2.1.0",
     "node-fetch": "^2.6.0",
@@ -27,14 +32,10 @@
     "queue-fifo": "^0.2.6",
     "read-excel-file": "^4.0.6",
     "request": "^2.88.2",
-    "uuidv4": "^6.0.9",
-    "xlsx": "^0.16.1",
-    "dotenv": "^8.2.0",
-    "fs": "0.0.1-security",
-    "multer": "^1.4.2",
-    "mv": "^2.1.1",
     "sequelize": "^5.22.3",
-    "sequelize-cli": "^6.1.0"
+    "sequelize-cli": "^6.1.0",
+    "uuidv4": "^6.0.9",
+    "xlsx": "^0.16.1"
   },
   "devDependencies": {}
 }
