--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
     "express": "^4.16.4",
+    "express-validator": "^6.6.0",
     "formidable": "^1.2.2",
     "fs": "0.0.1-security",
     "hashmap": "^2.4.0",
