--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "body-parser": "^1.19.0",
     "cheerio": "latest",
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
     "csv-parser": "^2.3.2",
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
@@ -19,6 +20,7 @@
     "hashmap": "^2.4.0",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
+    "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
     "moment": "^2.27.0",
     "morgan": "~1.9.1",
@@ -30,6 +32,7 @@
     "node-schedule": "^1.3.2",
     "nodemailer": "^6.4.10",
     "nodemon": "^2.0.4",
+    "passport": "^0.4.1",
     "queue-fifo": "^0.2.6",
     "read-excel-file": "^4.0.6",
     "request": "^2.88.2",
